--- a/Koala-Storyboard/Info.plist
+++ b/Koala-Storyboard/Info.plist
@@ -17,6 +17,8 @@
 					<string>$(PRODUCT_MODULE_NAME).SceneDelegate</string>
 					<key>UISceneStoryboardFile</key>
 					<string>Main</string>
+					<key>ITSAppUsesNonExemptEncryption</key>
+					<false/>
 				</dict>
 			</array>
 		</dict>
