--- a/Koala-Storyboard/Info.plist
+++ b/Koala-Storyboard/Info.plist
@@ -20,7 +20,7 @@
 					<key>ITSAppUsesNonExemptEncryption</key>
 					<false/>
 					<key>CFBundleDisplayName</key>
-					<string>delijn realtime</string>
+					<string>delijn</string>
 				</dict>
 			</array>
 		</dict>
