--- a/Koala-Storyboard/Info.plist
+++ b/Koala-Storyboard/Info.plist
@@ -25,6 +25,8 @@
 			</array>
 		</dict>
 	</dict>
+	<key>UILaunchScreen</key>
+	<dict/>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
