--- a/Koala-Storyboard/Info.plist
+++ b/Koala-Storyboard/Info.plist
@@ -10,6 +10,8 @@
 	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
+	<key>CFBundleName</key>
+	<string>$(PRODUCT_NAME)</string>
 	<key>CFBundlePackageType</key>
 	<string>$(PRODUCT_BUNDLE_PACKAGE_TYPE)</string>
 	<key>CFBundleShortVersionString</key>
@@ -18,7 +20,7 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
-        <key>CFBundleDisplayName</key>
+	<key>CFBundleDisplayName</key>
 	<string>delijntest</string>
 	<key>ITSAppUsesNonExemptEncryption</key>
 	<false/>
